# IntelTeleop

./: .gitignore  .gitmodules  .travis.yml  README.md  README_ProjetSupaero.md  architecture  test.t
ProjectSupaero/: ChangementsInfos.txt
ProjetSupaero/: CMakeLists.txt  CMakeLists.txt~  README.md
ProjetSupaero/cmake/: FindSFML.cmake  base.cmake
ProjetSupaero/data/: envsave.xml
ProjetSupaero/include/: environmentparser.h  input.h  input.h~  viewer.h  viewer.h~
ProjetSupaero/probleme_linkage/: .gitmodules  CMakeLists.txt  CMakeLists.txt~
ProjetSupaero/probleme_linkage/data/: env.xml
ProjetSupaero/probleme_linkage/include/: environmentparser.h  viewer.h  viewer.h~
ProjetSupaero/probleme_linkage/src/: CMakeLists.txt~  ProjectSupaero.cpp  viewer.cpp  viewer.cpp~
ProjetSupaero/probleme_linkage/tests/: CMakeLists.txt  test1.cpp  test1.cpp~
ProjetSupaero/src/: CMakeLists.txt  Functions.h  Functions.h~  Model.cpp~  ProjectSupaero.cpp  ProjectSupaero.cpp~  ProjectSupaero1.cppBackup  ProjectSupaero1.cpp~  controlMPC.cpp  controlMPC.cpp~  environmentparser.cpp  environmentparser.cpp~  environmentparser.h  input.cpp  input.cpp~  input.h  input.h~  mpcsolver.cpp  mpcsolver.cpp~  mpcsolver.h  quadModel.cpp  quadModel.cpp~  quadRungeKutta.cpp  quadRungeKutta.cpp~  systemEvol.cpp  test_viewer.cpp  viewer.cpp  viewer.cpp.orig  viewer.cpp~  viewer.h
ProjetSupaero/tests/: CMakeLists.txt  CMakeLists.txt.orig  CMakeLists.txt~  ProjectSupaero.cpp  ProjectSupaero.cpp.orig  ProjectSupaero.cpp~  sfml_viewer.cpp  sfml_viewer.cpp~  test_viewer.cpp  test_viewer.cpp~  test_viewer_environment.cpp  test_viewer_environment.cpp~
ProjetSupaero2017/catkin_ws/src/intel_teleop/intel_teleop/: CMakeLists.txt  package.xml
ProjetSupaero2017/catkin_ws/src/intel_teleop/intel_teleop_demo/: CMakeLists.txt  package.xml
ProjetSupaero2017/catkin_ws/src/intel_teleop/intel_teleop_demo/launch/: command_interface.launch  demo.launch  demo_world.launch  keyboard_controller.launch
ProjetSupaero2017/catkin_ws/src/intel_teleop/intel_teleop_demo/scripts/: enable_motors.sh
ProjetSupaero2017/catkin_ws/src/intel_teleop/intel_teleop_demo/worlds/: demo_world.world
ProjetSupaero2017/catkin_ws/src/intel_teleop/intel_teleop_env/: CMakeLists.txt  package.xml
ProjetSupaero2017/catkin_ws/src/intel_teleop/intel_teleop_ground/: CMakeLists.txt  genWorld.sh  object.urdf  package.xml
ProjetSupaero2017/catkin_ws/src/intel_teleop/intel_teleop_msgs/: CMakeLists.txt  package.xml
ProjetSupaero2017/catkin_ws/src/intel_teleop/intel_teleop_optcontrol/: CMakeLists.txt  package.xml
ProjetSupaero2017/catkin_ws/src/intel_teleop/intel_teleop_ui/: CMakeLists.txt  package.xml
ProjetSupaero2018/catkin_ws/src/car_model/: CMakeLists.txt  findACADO.cmake  package.xml
ProjetSupaero2018/catkin_ws/src/car_model/car_model_description/: CMakeLists.txt  package.xml
ProjetSupaero2018/catkin_ws/src/car_model/launch/: test_rocket.launch
ProjetSupaero2018/catkin_ws/src/car_model/scripts/: acado_client_example.py  car_model.py  car_position_publisher.py
ProjetSupaero2018/catkin_ws/src/car_model/src/: acado_test_service.cpp
ProjetSupaero2018/catkin_ws/src/car_model/srv/: OptControl.srv
ProjetSupaero2018/catkin_ws/src/display/: CMakeLists.txt  add_gazebo_model_path.sh  package.xml  readme.md
ProjetSupaero2018/catkin_ws/src/display/launch/: PIE86.launch  display.launch  gazdisplay.launch  spawn_obstacles.launch
ProjetSupaero2018/catkin_ws/src/display/msg/: Control.msg
ProjetSupaero2018/catkin_ws/src/display/plugins/: car_control_plugin.cc  state_feedback_plugin.cc
ProjetSupaero2018/catkin_ws/src/display/scripts/: G_Display.py  Init_world.py  XY_Emulator.py  gazebo_display.py  init_world.py  spawn_all_cylinders.py  spawn_cylinder_client.py  spawn_cylinder_server.py  xy_emulator.py
ProjetSupaero2018/catkin_ws/src/display/srv/: SpawnCylinder.srv
ProjetSupaero2018/catkin_ws/src/display/urdf/: cylinder.urdf
ProjetSupaero2018/catkin_ws/src/display/worlds/: basic_car.world  basic_car_world.world
ProjetSupaero2018/catkin_ws/src/opt_control/: CMakeLists.txt  findACADO.cmake  package.xml
ProjetSupaero2018/catkin_ws/src/opt_control/launch/: online_control.launch  test_opt_control.launch  test_sampler.launch
ProjetSupaero2018/catkin_ws/src/opt_control/scripts/: acado_client_example.py  sampling_example.py  test_trajectories.py
ProjetSupaero2018/catkin_ws/src/opt_control/src/: acado_opt_control.cpp  acado_wheel.hpp  modelConstants.h  sampling_service.cpp
ProjetSupaero2018/catkin_ws/src/opt_control/srv/: OptControl.srv  Sample.srv  Samples.srv
ProjetSupaero2018/catkin_ws/src/roadmap/: CMakeLists.txt  package.xml  test.py
ProjetSupaero2018/catkin_ws/src/roadmap/action/: OptControl.action
ProjetSupaero2018/catkin_ws/src/roadmap/data/: model_ptraju.hd5  model_ptrajx.hd5  model_value.hd5  nothing.txt
ProjetSupaero2018/catkin_ws/src/roadmap/launch/: init_prm.launch  test_controller.launch  test_latency_acado_init.launch  test_opt_control.launch  test_path_finding.launch
ProjetSupaero2018/catkin_ws/src/roadmap/msg/: ControlPath.msg
ProjetSupaero2018/catkin_ws/src/roadmap/resources/: obstacles.obs
ProjetSupaero2018/catkin_ws/src/roadmap/scripts/: acado_client_example.py  acado_performance_test.py  check_point_client.py  check_point_server.py  controller.py  controller_bof.py  init_prm.py  irepa.py  networks.py  path_finding_client.py  path_finding_client_example.py  path_finding_service.py  plot_prm.py  prm.py  prm_graph.py  read_obstacles.py  read_obstacles_client.py  read_obstacles_server.py
ProjetSupaero2018/catkin_ws/src/roadmap/srv/: PathFinding.srv
ProjetSupaero2018/catkin_ws/src/sampler/: CMakeLists.txt  package.xml
ProjetSupaero2018/catkin_ws/src/sampler/launch/: test_sampler.launch
ProjetSupaero2018/catkin_ws/src/sampler/scripts/: sampler_service_client_example.py  sampling_example.py
ProjetSupaero2018/catkin_ws/src/sampler/src/: sampler_service.cpp
ProjetSupaero2018/catkin_ws/src/utils/: CMakeLists.txt  package.xml
ProjetSupaero2018/catkin_ws/src/utils/obstacles/: CMakeLists.txt
(+238 files in other folders)
