CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

INCLUDE(cmake/base.cmake)
INCLUDE(cmake/cpack.cmake)

SET(PROJECT_NAME ProjectSupaero_ACADO)
SET(PROJECT_DESCRIPTION "acado for Supaero project : MPC for drones")
SET(PROJECT_URL "")
SET(PROJECT_VERSION "")

SET(CXX_DISABLE_WERROR True)
SET(CMAKE_VERBOSE_MAKEFILE True)
SET(CMAKE_CXX_FLAGS "-std=c++14 -g")

SETUP_PROJECT()
SET(${PROJECT_NAME}_HEADERS
  include/environmentparser.h
  include/viewer.h
  include/input.h
  include/mpcsolver.h
)

ADD_REQUIRED_DEPENDENCY("acado")
ADD_REQUIRED_DEPENDENCY("sfml-window" >=2.1)
ADD_REQUIRED_DEPENDENCY("sfml-system" >=2.1)
ADD_REQUIRED_DEPENDENCY("gepetto-viewer-corba")
ADD_REQUIRED_DEPENDENCY("tinyxml2")
ADD_REQUIRED_DEPENDENCY("eigenpy")

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tests)

SETUP_PROJECT_FINALIZE()
SETUP_PROJECT_CPACK()
