<?xml version="1.0"?>
<package format="2">
  <name>car_model</name>
  <version>0.0.0</version>
  <description>The car_model package</description>

  <maintainer email="martin.renou@gmail.com">martinrenou</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
