<?xml version="1.0"?>
<package format="2">
  <name>opt_control</name>
  <version>0.0.0</version>
  <description>The opt_control package</description>

  <maintainer email="martin.renou@gmail.com">martinrenou</maintainer>

  <license>TODO</license>


    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>roadmap</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>rospy</exec_depend>
    <build_depend>roscpp</build_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>roadmap</exec_depend>
    
    
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
