<?xml version="1.0"?>
<package>
    <name>intel_teleop_ground</name>
    <version>0.7.0</version>
    <description>The intel_teleop_ground package</description>
    <maintainer email="alexis.nicolin@isae.fr">Alexis</maintainer>
    <license>BSD</license>


    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>intel_teleop_msgs</build_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>std_srvs</run_depend>
    <run_depend>intel_teleop_msgs</run_depend>
    <run_depend>roslib</run_depend>


    <export>
    </export>
</package>